[*] correct opacity and forecast weathere icons align to left

--- a/src/app/weather-data/weather.component.css
+++ b/src/app/weather-data/weather.component.css
@@ -8,14 +8,14 @@
 }
 
 .weather-opacity1 {
-  opacity: 0.7;
+  opacity: 0.85;
 }
 
 .weather-opacity2 {
-  opacity: 0.5;
+  opacity: 0.65;
 }
 
 .weather-opacity3 {
-  opacity: 0.3;
+  opacity: 0.45;
 }
 
